--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <h1>Philips Deng</h1>
         <nav>
-            <a href="index.html" data-lang="en">Home</a>
+            <a href="index.html?lang=en" data-lang="en">Home</a>
             <a href="index.html?lang=zh" data-lang="zh" style="display:none;">主页</a>
             <a href="index.html?lang=de" data-lang="de" style="display:none;">Startseite</a>
-            <a href="gallery.html" data-lang="en">Gallery</a>
+            <a href="gallery.html?lang=en" data-lang="en">Gallery</a>
             <a href="gallery.html?lang=zh" data-lang="zh" style="display:none;">画廊</a>
             <a href="gallery.html?lang=de" data-lang="de" style="display:none;">Galerie</a>
-            <a href="projects.html" data-lang="en">Research Project</a>
+            <a href="projects.html?lang=en" data-lang="en">Research Project</a>
             <a href="projects.html?lang=zh" data-lang="zh" style="display:none;">研究项目</a>
             <a href="projects.html?lang=de" data-lang="de" style="display:none;">Forschungsprojekt</a>
         </nav>
