--- a/projects.html
+++ b/projects.html
@@ -11,13 +11,13 @@
     <header>
         <h1>Philips Deng</h1>
         <nav>
-            <a href="index.html" data-lang="en">Home</a>
+            <a href="index.html?lang=en" data-lang="en">Home</a>
             <a href="index.html?lang=zh" data-lang="zh" style="display:none;">主页</a>
             <a href="index.html?lang=de" data-lang="de" style="display:none;">Startseite</a>
-            <a href="gallery.html" data-lang="en">Gallery</a>
+            <a href="gallery.html?lang=en" data-lang="en">Gallery</a>
             <a href="gallery.html?lang=zh" data-lang="zh" style="display:none;">画廊</a>
             <a href="gallery.html?lang=de" data-lang="de" style="display:none;">Galerie</a>
-            <a href="projects.html" data-lang="en">Research Project</a>
+            <a href="projects.html?lang=en" data-lang="en">Research Project</a>
             <a href="projects.html?lang=zh" data-lang="zh" style="display:none;">研究项目</a>
             <a href="projects.html?lang=de" data-lang="de" style="display:none;">Forschungsprojekt</a>
         </nav>
@@ -37,8 +37,8 @@
             <h2 data-lang="zh" style="display:none;">研究项目</h2>
             <h2 data-lang="de" style="display:none;">Forschungsprojekt</h2>
             <ul>
-                <li><a href="https://github.com/Pangolin112/SplatterScene" target="_blank" style="color: rgba(255, 255, 255, 0.349);">SplatterScene: Single input to 3DGS on indoor scenes</a></li>
-                <li><a href="https://github.com/wxinhua/tum-adlr-01" target="_blank" style="color: rgba(255, 255, 255, 0.349);">Motion planning with moving obstacles: RL based hybrid algorithm</a></li>
+                <li><a href="https://github.com/Pangolin112/SplatterScene" target="_blank" style="color: #b0b0b0;">SplatterScene: Single input to 3DGS on indoor scenes</a></li>
+                <li><a href="https://github.com/wxinhua/tum-adlr-01" target="_blank" style="color: #b0b0b0;">Motion planning with moving obstacles: RL based hybrid algorithm</a></li>
             </ul>
         </section>
     </div>
