chore: Update contact information in HTML files

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
             <p data-lang="zh" style="display:none;">你好！我是邓，一名摄影师&机器人与人工智能的研究生。</p>
             <p data-lang="de" style="display:none;">Servus! Ich bin Philips Deng, ein Fotograf & Masterstudent im Bereich Robotik und Künstliche Intelligenz.</p>
         </section>
+            <!-- 联系方式部分 -->
+        <section class="contact">
+            <h2 data-lang="en">Contact</h2>
+            <h2 data-lang="zh" style="display:none;">联系</h2>
+            <h2 data-lang="de" style="display:none;">Kontakt</h2>
+            <p>Email: philips.deng@yahoo.com</p>
+            <p data-lang="en">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: rgba(255, 255, 255, 0.349);">philips_deng</a></p>
+            <p data-lang="zh" style="display:none;">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: rgba(255, 255, 255, 0.349);">philips_deng</a></p>
+            <p data-lang="de" style="display:none;">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: #b0b0b0;">philips_deng</a></p>
+        </section>
     </div>
 
     <!-- 页面页脚 -->
