--- a/gallery.html
+++ b/gallery.html
@@ -136,6 +136,16 @@
                 </div>
             </div>
         </section>
+        <!-- 联系方式部分 -->
+        <section class="contact">
+            <h2 data-lang="en">Contact</h2>
+            <h2 data-lang="zh" style="display:none;">联系</h2>
+            <h2 data-lang="de" style="display:none;">Kontakt</h2>
+            <p>Email: philips.deng@yahoo.com</p>
+            <p data-lang="en">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: rgba(255, 255, 255, 0.349);">philips_deng</a></p>
+            <p data-lang="zh" style="display:none;">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: rgba(255, 255, 255, 0.349);">philips_deng</a></p>
+            <p data-lang="de" style="display:none;">IG: <a href="https://www.instagram.com/philips_deng?igsh=Y2s1MGI5bmVwd2U0&utm_source=qr" target="_blank" style="color: #b0b0b0;">philips_deng</a></p>
+        </section>
     </div>
 
     <!-- 页面页脚 -->
