chore: Update contact information, project titles, and images in HTML files

--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,14 @@
             <h2 data-lang="zh" style="display:none;">研究项目</h2>
             <h2 data-lang="de" style="display:none;">Forschungsprojekt</h2>
             <ul>
-                <li><a href="https://github.com/Pangolin112/SplatterScene" target="_blank" style="color: #b0b0b0;">SplatterScene: Single input to 3DGS on indoor scenes</a></li>
-                <li><a href="https://github.com/wxinhua/tum-adlr-01" target="_blank" style="color: #b0b0b0;">Motion planning with moving obstacles: RL based hybrid algorithm</a></li>
+                <li>
+                    <a class="project-title" href="https://github.com/Pangolin112/SplatterScene" target="_blank">SplatterScene: Single image to 3DGS on indoor scenes</a>
+                    <img src="images/poster_spltscene.png" alt="SplatterScene Poster">
+                </li>
+                <li>
+                    <a class="project-title" href="https://github.com/wxinhua/tum-adlr-01" target="_blank">Motion planning with moving obstacles: RL-based hybrid algorithm</a>
+                    <img src="images/poster_RL_Motion.jpg" alt="Motion Planning Poster">
+                </li>
             </ul>
         </section>
         <!-- 联系方式部分 -->
@@ -55,6 +61,9 @@
 
     <!-- 页面页脚 -->
     <footer>
+        <p data-lang="zh" style="display:none;" class="footer-note">*Yunfei是中文名字</p>
+        <p data-lang="en" class="footer-note">*Yunfei is the Chinese name</p>
+        <p data-lang="de" style="display:none;" class="footer-note">*Yunfei ist der chinesische Name</p>
         <p>&copy; 2024 Philips Deng. All rights reserved.</p>
     </footer>
 
